<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.Detail_Makanan">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/namamakanan"
            android:textStyle="bold"
            android:textSize="26dp"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="10dp"/>


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/ic_home"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/gambarmakanan"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/resep_makanan"
            android:textSize="26dp"/>


    </LinearLayout>

</LinearLayout>