<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_marginTop="8dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp">


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="20dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:src="@drawable/ic_account"
                    android:contentDescription="@string/rekomendasimakanan"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/namamakanan"
                        android:layout_marginLeft="10dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/namamakanan"
                        android:layout_marginLeft="190dp"
                        android:background="@color/darkGreen"
                        android:textColor="@color/white"/>

                </LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kalori"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="10dp"
                    android:textStyle="bold"
                    android:textSize="12sp"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deskripsimakanan"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="10dp"/>
            </LinearLayout>



        </androidx.cardview.widget.CardView>

</LinearLayout>
